- merged java 11 branch into java 17 branch